GNOME Bugzilla – Bug 771047
search provider no longer functional
Last modified: 2016-09-08 10:26:59 UTC
After updating my system from GNOME 3.20.x to 3.21.91 I realized that the gnome-software search provider seems no longer to be functional Searching for 'uninstalled' applications out of shell's activity overview no longer results in Software proposing available apps - which is a quite nice feature
commit 25f6d252fe0cc8aa7320d6ff4ab7de8777c43945 Author: Richard Hughes <richard@hughsie.com> Date: Thu Sep 8 11:23:16 2016 +0100 Unbreak the GNOME Shell search provider Applications now need an icon to get past the plugin loader sanity tests. Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=771047