Unbreak the GNOME Shell search provider

Applications now need an icon to get past the plugin loader sanity tests.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=771047